Fixed horizontal scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -78,6 +78,12 @@
 html {
   position: relative;
 }
+body {
+  overflow: hidden;
+  @supports (overflow: clip) {
+    overflow: clip;
+  }
+}
 .phone-skew {
   transform: perspective(400px) rotateY(3deg) skewX(11.1deg) skewY(-10.9deg);
 }
